# arke

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
arke/: __about__.py  __init__.py  _version.py
arke/gateway/: __init__.py  errors.py  events.py  manager.py  ratelimit.py  shard.py
arke/http/: __init__.py  auth.py  client.py  errors.py  ratelimit.py  route.py
arke/internal/: async_utils.py  json.py  lock.py  ratelimit.py
arke/utils/: __init__.py  dispatcher.py  functools.py
arke/utils/dispatcher/: __init__.py  raw.py  typed.py
docs/: conf.py  index.rst
docs/api/: http.rst  internals.rst  utils.rst
thing/: __init__.py
thing/http/: __init__.py  client.py  errors.py  ratelimit.py  route.py
thing/internal/: json.py
