[project]
name = "arke-discord"
description = "Python Discord API Wrapper made from the ground up."
authors = [
    {name = "Emre Terzioglu", email = "emreterzioglu49@gmail.com"},
]
dependencies = [
    "aiohttp<4.0,>=3.8.0",
    "discord-typings<1.0,>=0.6.0",
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: AsyncIO",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/EmreTech/arke"
"Bug Tracker" = "https://github.com/EmreTech/arke/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.black]
line-length = 100
include = ["arke"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = ["F", "E", "PL"]
exclude = [
    ".git",
    ".pdm-build",
    ".venv",
    "dist",
]
ignore = [
    # star imports are checked w/ pyright
    "F403",
    "F405",

    # black handles long lines
    "E501",

    # unnecessary rules
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
]
target-version = "py310"

[tool.pdm.version]
source = "scm"
write_to = "arke/_version.py"
write_template = "__version__ = \"{}\""

[tool.pdm.dev-dependencies]
docs = [
    "sphinx>=7.0.1,<8",
    "furo>=2023.5.20",
    "sphinx-autobuild>=2021.3.14",
]
